# health-ai-tgfront-review

./: .gitignore  bot.py  dump.rdb  pyproject.toml  to_api_utils.py  translated_messages.py  utils.py  voice.py
deepgram_responses/: 1722170679.754455.json  1722170925.0025802.json  1722171018.4356863.json  1722171101.02433.json  1722171156.1136684.json  1722171185.551293.json  1722442720.9884846.json  1722759082.848226.json  1722759137.50018.json  1722759195.6905687.json  1722759275.3756413.json  1722759366.0459883.json  1722785720.1397285.json
